@@ -1,4 +1,5 @@
   [Michele Simionato]
+  * Fixed the WebUI export
   * Removed the .txt outputs from the WebUI page engine/<output_id>/outputs
     (they are useful only internally)
   * Fixed the export: first the xml exporter is tried and then the csv exporter;
